Change linefeed regex to support both windows and unix

--- a/res/template.html
+++ b/res/template.html
@@ -12,8 +12,8 @@
     <div class="reveal">
 			<div class="slides">
         <section data-markdown="PRESENTATION.md"
-                 data-separator="^\n\n\n"
-                 data-separator-vertical="^\n\n"
+                 data-separator="^(\r\n?\n)(\r\n?\n)(\r\n?\n)"
+                 data-separator-vertical="^(\r\n?\n)(\r\n?\n)"
                  data-separator-notes="^Note:"
                  data-charset="iso-8859-15">
         </section>
